Finished background section

--- a/Paper/Bibliography.bib
+++ b/Paper/Bibliography.bib
@@ -1,5 +1,39 @@
-@article{ one,
-    author = "Robert E. Schapire",
-    title = "A Boosting Approach to Machine Learning: An Overview",
-    year = "2001",
-    publisher = "AT&T Labs—Research Shannon Laboratory"}
+@incollection{one,
+  title={The boosting approach to machine learning: An overview},
+  author={Schapire, Robert E},
+  booktitle={Nonlinear estimation and classification},
+  pages={149--171},
+  year={2003},
+  publisher={Springer}
+}
+@article{two,
+  title={Constructing optimal binary decision trees is NP-complete},
+  author={Laurent, Hyafil and Rivest, Ronald L},
+  journal={Information processing letters},
+  volume={5},
+  number={1},
+  pages={15--17},
+  year={1976}
+}
+@article{three,
+    author = "Alex Rogozhnikov",
+    title = "Gradient Boosting explained",
+    year = "2016"
+}
+@article{classificationexplanation,
+  title={Additive logistic regression: a statistical view of boosting (with discussion and a rejoinder by the authors)},
+  author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert and others},
+  journal={The annals of statistics},
+  volume={28},
+  number={2},
+  pages={337--407},
+  year={2000},
+  publisher={Institute of Mathematical Statistics}
+}
+@inproceedings{mason2000boosting,
+  title={Boosting algorithms as gradient descent},
+  author={Mason, Llew and Baxter, Jonathan and Bartlett, Peter L and Frean, Marcus R},
+  booktitle={Advances in neural information processing systems},
+  pages={512--518},
+  year={2000}
+}
