--- a/Paper/Bibliography.bib
+++ b/Paper/Bibliography.bib
@@ -37,3 +37,39 @@
   pages={512--518},
   year={2000}
 }
+@article{randomforest1,
+author = {Toloşi, Laura and Lengauer, Thomas},
+title = {Classification with correlated features: unreliability of feature ranking and solutions},
+journal = {Bioinformatics},
+volume = {27},
+number = {14},
+pages = {1986-1994},
+year = {2011},
+doi = {10.1093/bioinformatics/btr300},
+URL = {http://dx.doi.org/10.1093/bioinformatics/btr300},
+eprint = {/oup/backfile/content_public/journal/bioinformatics/27/14/10.1093_bioinformatics_btr300/1/btr300.pdf}
+}
+@book{friedman2001elements,
+  title={The elements of statistical learning},
+  author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
+  volume={1},
+  number={10},
+  year={2001},
+  publisher={Springer series in statistics New York, NY, USA:}
+}
+@article{neuralnets1,
+  title={Binarized neural networks: Training deep neural networks with weights and activations constrained to+ 1 or-1},
+  author={Courbariaux, Matthieu and Hubara, Itay and Soudry, Daniel and El-Yaniv, Ran and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1602.02830},
+  year={2016}
+}
+@article{neuralnets2,
+  title={Bias reduction in skewed binary classification with Bayesian neural networks},
+  author={Lisboa, Paulo JG and Vellido, Alfredo and Wong, H},
+  journal={Neural Networks},
+  volume={13},
+  number={4-5},
+  pages={407--410},
+  year={2000},
+  publisher={Elsevier}
+}
